OLD - 002-multi-team-demo/app-team-1/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: up-and-running
  namespace: app-team-1
spec: 
  gateways:
  - istio-system/istio-ingressgateway
  hosts: 
  - "team1.gke-at-scale.com"
  http:
  - match:
    - uri:
        prefix: /
    route: 
    - destination: 
        host: up-and-running.app-team-1.svc.cluster.local
        port: clear
          number: 8080


gcloud iam service-accounts create autoneg-system --display-name "autoneg" --project=thiatt-manual-005
gcloud iam service-accounts add-iam-policy-binding \
  --role roles/iam.workloadIdentityUser \
  --member "serviceAccount:${PROJECT_ID}.svc.id.goog[autoneg-system/autoneg-controller-manager]" \
  autoneg-system@${PROJECT_ID}.iam.gserviceaccount.com \
  --project=thiatt-manual-005

gcloud iam roles create autoneg --project ${PROJECT_ID} \
  --permissions=compute.backendServices.get,compute.backendServices.update,compute.regionBackendServices.get,compute.regionBackendServices.update,compute.networkEndpointGroups.use,compute.healthChecks.useReadOnly,compute.regionHealthChecks.useReadOnly
gcloud projects add-iam-policy-binding \
  --role projects/${PROJECT_ID}/roles/autoneg \
  --member "serviceAccount:autoneg-system@${PROJECT_ID}.iam.gserviceaccount.com" \
  ${PROJECT_ID}
  --project=thiatt-manual-005
